# rose

./: .gitignore  .readthedocs.yaml  404.html  Minnesota example Kohn Correction EIM and Phi0 Boundary Nov1.nb  README.md  ROSE2_BAND_CAMP.ipynb  conf.py  index.html  mkdocs.yml  myfile.md  objects.inv  pyproject.toml  requirements.txt  rosebandsdk.md
.github/workflows/: docs-publish.yml  pypi-publish.yml  python-package.yml
_build/doctrees/: README.doctree  environment.pickle  index.doctree  myfile.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  myfile.html  objects.inv  search.html  searchindex.js
bandframework/rose/: README.md
basis/: index.html
contact/: index.html
data/: KD_default.json  WLH_mean.json
docs/: .readthedocs.yaml  api.rst  basis.md  conf.py  contact.md  hifi_solver.md  index.md  index.rst  interaction.md  overview.md  overview.rst  rbe.md  reference.md  requirements.txt  sae.md
docs/_build/html/: .buildinfo  (+8 more)
docs/tutorials/: FFUQ_transmission.ipynb  ROSE_Add_your_own_HF_solver.ipynb  ROSE_tutorial_0_quickstart.ipynb  ROSE_tutorial_1_building_an_emulator.ipynb  ROSE_tutorial_2_optical_potential_surmise_UQ.ipynb  ROSE_tutorial_3_global_KD_strength_fxn.ipynb  Tutorial_0_quickstart.ipynb
examples/: Linalg_solver_benchmarks.ipynb  ROSE_Add_your_own_HF_solver.ipynb  ROSE_HF_comp.ipynb
hifi_solver/: index.html
interaction/: index.html
rbe/: index.html
sae/: index.html
search/: search_index.json
src/data/: WLH_mean.json  mass_1.mas20.txt
src/roqse/: free_solutions.py  schroedinger.py
src/roqse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rose/: __init__.py  active_subspace.py  basis.py  constants.py  elastic_emulator.py  energized_interaction_eim.py  free_solutions.py  interaction.py  interaction_eim.py  koning_delaroche.py  lagrangelegendersolver.py  metrics.py  mn_potential.py  njit_solver_utils.py  numerov_se.py  reduced_basis_emulator.py  scattering_amplitude_emulator.py  schroedinger.py  spin_orbit.py  training.py  utility.py  wlh.py
src/rose.egg-info/: PKG-INFO  SOURCES.txt
tests/: benchmark.py  generate_benchmark_data.ipynb  generate_benchmark_data.py  playground.ipynb  test_interactions.py  test_kd.py  test_sae.py  test_schroedinger_equation.py  train.npy  u_mn_test.txt
tutorials/: K - ROSE_tutorial_1_building_an_emulator.ipynb  Original K ROSE_tutorial_1_building_an_emulator.ipynb  P - ROSE_tutorial_1_building_an_emulator.ipynb  ROSE_tutorial_1_building_an_emulator.ipynb  ROSE_tutorial_2_optical_potential_surmise_UQ.ipynb  Rose_tutorial_1_fixed_K.ipynb
tutorials/ROSE_tutorial_0_quickstart/: index.html
tutorials/ROSE_tutorial_1_building_an_emulator/: index.html
(+1523 files in other folders)
