[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclear-rose"
dynamic = ["version", "dependencies"]
authors = [
  {name="Daniel Odell", email="dodell@ohio.edo"},
  {name="Pablo Giuliani", email="giulia27@msu.edu"}
  {name="Kyle Godbey", email="rose@kyle.ee"}
  {name="Kyle Beyer"}
  {name="Moses Chan"}
]
description = "The Reduced-Order Scattering Emulator (rose) is a user-friendly software for building efficient surrogate models for nuclear scattering."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/rose/__version__.py"
